added assessment functionality
